--- a/src/components/analyze/aq-analyze-detail.html
+++ b/src/components/analyze/aq-analyze-detail.html
@@ -5,6 +5,7 @@
 <link rel='import' href='../../icons/aq-iconset.html'>
 <link rel="import" href="../common/aq-backtest-detail-item.html">
 <link rel="import" href="../common/aq-check-authentication.html">
+<link rel="import" href="../common/aq-loading-progress.html">
 
 <dom-module id="aq-analyze-detail">
 	
@@ -22,13 +23,18 @@
 	    </app-route>
 
 	    <template is='dom-if' if='{{active}}'>
-			<div class="goBackButton layout horizontal">
-	            <paper-icon-button noink id='backButton' class="self-center" title="Go Back" icon="aq-icons:arrow-back" on-tap="goBackAllBacktests">
-	            </paper-icon-button>
-	            <p class="self-center">Back to All Backtests</p>
-	      	</div>
+		
+    		<aq-loading-progress loading='{{loading}}'></aq-loading-progress>
+		  
+		    <template is='dom-if' if='{{!loading}}'>
+		    	<div class="goBackButton layout horizontal">
+		            <paper-icon-button noink id='backButton' class="self-center" title="Go Back" icon="aq-icons:arrow-back" on-tap="goBackAllBacktests">
+		            </paper-icon-button>
+		            <p class="self-center">Back to All Backtests</p>
+		      	</div>
 
-	      	<aq-backtest-detail-item backtest-id="[[backtestId]]"></aq-backtest-detail-item>
+		      	<aq-backtest-detail-item loading="{{loading}}" backtest-id="[[backtestId]]"></aq-backtest-detail-item>
+	      	</template>
       	</template>
 	</template>
 
@@ -46,6 +52,10 @@
 
 				routeData:Object,
 
+				loading:{
+					type:Boolean,
+					value:false,
+				},
 			},
 
 			observers:['_activeChanged(active, routeData)'],
@@ -61,6 +71,7 @@
 	         	 		this.fire('rt-changed',{route:'/user/signin'});
 		          		return;
 		          }
+
 		      	}
 
 				if (active && routeData) {
