--- a/src/components/analyze/aq-analyze-home.html
+++ b/src/components/analyze/aq-analyze-home.html
@@ -4,6 +4,8 @@
 <link rel='import' href='../../../bower_components/app-route/app-location.html'>
 
 <link rel='import' href='../common/aq-check-authentication.html'>
+<link rel="import" href="../common/aq-loading-progress.html">
+
 <link rel='import' href='./aq-analyze-home-menu.html'>
 <link rel='import' href='./aq-analyze-home-backtest-item2.html'>
 
@@ -76,7 +78,8 @@
           	on-response="onGetAllBacktestsForStrategy"
           	on-error="onGetAllBacktestsForStrategyError"
           	headers='{{header}}'
-          	debounce-duration="500">
+          	debounce-duration="500"
+          	loading='{{loading}}'>
         </iron-ajax>
 		
 		<iron-ajax
@@ -92,34 +95,39 @@
 
         <aq-check-authentication id='authItem'></aq-check-authentication>
 		
+    	
 		<template is='dom-if' if='{{isActive(active, subroute)}}'>
-			<div id='container'>
-				<template is='dom-if' if="[[!showComparison]]">
-					<aq-analyze-home-menu num-active-backtests="[[checkedCount]]" strategy-name="{{strategyName}}"></aq-analyze-home-menu>
+			<aq-loading-progress loading='{{loading}}'></aq-loading-progress>
+	
+	    	<template is='dom-if' if='{{!loading}}'>
+				<div id='container'>
+					<template is='dom-if' if="[[!showComparison]]">
+						<aq-analyze-home-menu num-active-backtests="[[checkedCount]]" strategy-name="{{strategyName}}"></aq-analyze-home-menu>
 
-					<p>All Backtests for <i>{{strategyName}}</i></p>
-					<div class="layout horizontal wrap flex around-justified itemcontainer" >
-					<template is='dom-repeat' items="{{backtests}}" initial-count=10>
-						<aq-analyze-home-backtest-item2  index="{{index}}" backtest="{{item}}" detail-icon=1 share-icon=1></aq-analyze-home-backtest-item2>
+						<p>All Backtests for <i>{{strategyName}}</i></p>
+						<div class="layout horizontal wrap flex around-justified itemcontainer" >
+						<template is='dom-repeat' items="{{backtests}}" initial-count=10>
+							<aq-analyze-home-backtest-item2  index="{{index}}" backtest="{{item}}" detail-icon=1 share-icon=1></aq-analyze-home-backtest-item2>
+						</template>
+						<template is='dom-if' if='[[isBacktestCountOdd(backtests)]]'>
+							<div class="spacer"></div>
+						</template>
+						</div>
 					</template>
-					<template is='dom-if' if='[[isBacktestCountOdd(backtests)]]'>
-						<div class="spacer"></div>
+
+					<template is='dom-if' if="[[showComparison]]">
+						<aq-analyze-backtest-comparison-item strategy-name="{{strategyName}}" compare-items="[[checkedItems]]" active="[[showComparison]]">
+						</aq-analyze-backtest-comparison-item>
 					</template>
-					</div>
-				</template>
 
-				<template is='dom-if' if="[[showComparison]]">
-					<aq-analyze-backtest-comparison-item strategy-name="{{strategyName}}" compare-items="[[checkedItems]]" active="[[showComparison]]">
-					</aq-analyze-backtest-comparison-item>
-				</template>
+				</div>	
 
-			</div>	
-
-		    <aq-delete-dialog id ="deleteDialog" heading="Delete Backtests"
-				 message="Are you sure to delete [[checkedCount]] backtest[[getMessageSuffix(checkedCount)]]?"	
-				 cancel="Cancel"
-				 accept="OK">
-	    	</aq-delete-dialog>
+			    <aq-delete-dialog id ="deleteDialog" heading="Delete Backtests"
+					 message="Are you sure to delete [[checkedCount]] backtest[[getMessageSuffix(checkedCount)]]?"	
+					 cancel="Cancel"
+					 accept="OK">
+		    	</aq-delete-dialog>
+			</template>
 		</template>
 
     </template>
@@ -165,6 +173,8 @@
 
 				routeData:Object,
 				subroute:Object,
+
+				loading:Boolean
     		}, 
 
     		observers:['_activeChanged(active, subroute)'],
