--- a/src/components/editor/aq-editor-home.html
+++ b/src/components/editor/aq-editor-home.html
@@ -3,6 +3,7 @@
 <link rel='import' href='../../../bower_components/iron-ajax/iron-ajax.html'>
 <link rel='import' href='../../../bower_components/app-route/app-route.html'>
 <link rel='import' href='../../../bower_components/app-route/app-location.html'>
+<link rel='import' href='../../../bower_components/iron-signals/iron-signals.html'>
 
 <link rel='import' href='../common/aq-check-authentication.html'>
 <link rel="import" href="../common/aq-loading-progress.html">
@@ -118,7 +119,8 @@
 		<!--iron-media-query query="(max-width: 640px)" query-matches="{{narrowViewport}}"></iron-media-query-->
         <aq-check-authentication id='authItem'></aq-check-authentication>
         <app-location route="{{route}}" ></app-location>
-        
+        <iron-signals on-iron-signal-strategy-added='onStrategyAdded'></iron-signals>
+
         <app-route
             route="{{route}}"
             pattern="/dashboard/editor"
@@ -263,7 +265,8 @@
     },
 
     onGetStrategiesResponse: function(data) {
-    	 this.strategies = data.detail.response;	
+    	 this.strategies = data.detail.response;
+       this.dirtyBit = 0;	
     },
 
 		onGetStrategiesError: function(data) {
@@ -446,6 +449,10 @@
     		this.$$('#ifsearch').style.display = 'none';
     	}
 
+      if(this.searchParam=="" && searchtext=="" && this.dirtyBit == 0){
+        return;
+      }
+
     	this.searchParam = {"search":searchtext};
       this.fetchResults();
     },
@@ -459,9 +466,10 @@
     				this.$.deleteStrategyQuery.generateRequest();
     			}
     		}
-		}
+		  }
 
-		this.deleteId = "";	        	
+		this.deleteId = "";	 
+
     },
 
     onDeleteStrategyError: function() {
@@ -479,6 +487,7 @@
           }
 
   				this.checkedCount -= 1;
+          this.dirtyBit = 1;
   			}
   		}
   	},
@@ -492,6 +501,7 @@
 
     fetchResults: function() {
         if (this.$.authItem.checkHasToken()) { 
+          console.log("Fetching");
           this.header = this.$.authItem.getHeader();
           var APIEndPoint = new Polymer.IronMetaQuery({key: 'APIEndPoint'}).value;
           this.$.getStrategiesQuery.url = APIEndPoint+'/strategy';
@@ -528,10 +538,13 @@
           this.fire('close-action');
         }
 
-        this.fetchResults();
+        if (this.dirtyBit == 1 || !(this.dirtyBit+1)) {
+          this.set('strategies', []);
+          this.fetchResults();
+        }
 
       } else {
-        this.strategies = [];
+
         this.checkedItems = {};
         this.checkedCount = 0;
       }
@@ -539,6 +552,10 @@
 
     hasStrategies: function(strategies, searchParam) {
         return (strategies && strategies.length > 0) || (searchParam && searchParam.search!="");
+    },
+
+    onStrategyAdded: function() {
+        this.dirtyBit = 1;
     },
 
 	});
