1. Added dirty bit checking in community 2. Minor bug fixes in dirty bit check of analyze 3. Added loading progress in HELP 4. Code cleanup

--- a/src/components/analyze/aq-analyze-home.html
+++ b/src/components/analyze/aq-analyze-home.html
@@ -230,7 +230,6 @@
 			},
 
 			onGetStrategy: function(data) {
-				console.log("Fetching");
 				this.strategyName = data.detail.response.name;
 				this.$.getBacktestsQuery.generateRequest();
 			},
@@ -330,6 +329,7 @@
 	        			this.set('backtests', []);
 		        		this.header = this.$.authItem.getHeader();
 	        			this.$.getStrategyQuery.generateRequest();
+	        			this.dirtyBit = 0;
 		        	} 
 	        			
         		} else {
