--- a/src/components/community/aq-community-createpost.html
+++ b/src/components/community/aq-community-createpost.html
@@ -263,6 +263,8 @@
 
                 this.resetView();
                 this.fire('rt-changed', {route:"/dashboard/community/topics/"+this.newThreadId});
+
+                this.fire('iron-signal', {name:'post-added'});
             },
 
             onPostThreadError: function(data) {
